Fix whitespace

--- a/styles/forms.css
+++ b/styles/forms.css
@@ -345,9 +345,7 @@ border-top: 0.0618em solid ButtonText;
 }
 select[multiple] optgroup option {}
 select[multiple] optgroup option {}
-option {
-  color: currentColor;
-}
+option { color: currentColor }
 
 dialog {
   left: 0;
